--- a/.travis.yml
+++ b/.travis.yml
@@ -42,6 +42,9 @@ matrix:
     # coveralls
     - os: linux
       env: EVENT_BUILD_METHOD=cmake EVENT_CMAKE_OPTIONS="-DEVENT__COVERAGE=ON -DCMAKE_BUILD_TYPE=debug" COVERALLS=yes
+    # test-export
+    - os: linux
+      env: EVENT_BUILD_METHOD=cmake EVENT_CMAKE_OPTIONS="" TEST_EXPORT=yes
     # for openssl1.1
     - os: linux
       dist: bionic
@@ -124,9 +127,14 @@ script:
 
       mkdir build &&
       cd build &&
-      cmake .. $EVENT_CMAKE_OPTIONS &&
-      travis_wait $TIMEOUT
-      cmake --build . --target verify;
+      cmake .. $EVENT_CMAKE_OPTIONS;
+      if [ "$TEST_EXPORT" == "yes" ]; then
+        cmake --build .;
+        sudo python3 ../test-export/test-export.py static;
+        sudo python3 ../test-export/test-export.py shared;
+      else
+        travis_wait $TIMEOUT cmake --build . --target verify;
+      fi
     fi
   - if [ "$TOOL" == "doxygen" ]; then
       eval "$(ssh-agent -s)";
