--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ osx_image: xcode10.1
 
 branches:
   except:
-    - /.*appveyor.*/
+#    - /.*appveyor.*/
     - /.*win.*/
     - /.*mingw.*/
     - /.*freebsd.*/
@@ -44,7 +44,9 @@ matrix:
       env: EVENT_BUILD_METHOD=cmake EVENT_CMAKE_OPTIONS="-DEVENT__COVERAGE=ON -DCMAKE_BUILD_TYPE=debug" COVERALLS=yes
     # test-export
     - os: linux
-      env: EVENT_BUILD_METHOD=cmake EVENT_CMAKE_OPTIONS="" TEST_EXPORT=yes
+      env: EVENT_BUILD_METHOD=cmake EVENT_CMAKE_OPTIONS="-DEVENT__LIBRARY_TYPE=STATIC" TEST_EXPORT=STATIC
+    - os: linux
+      env: EVENT_BUILD_METHOD=cmake EVENT_CMAKE_OPTIONS="-DEVENT__LIBRARY_TYPE=SHARED" TEST_EXPORT=SHARED
     # for openssl1.1
     - os: linux
       dist: bionic
@@ -128,9 +130,11 @@ script:
       mkdir build &&
       cd build &&
       cmake .. $EVENT_CMAKE_OPTIONS;
-      if [ "$TEST_EXPORT" == "yes" ]; then
+      if [ "$TEST_EXPORT" == "STATIC" ]; then
         cmake --build .;
         sudo python3 ../test-export/test-export.py static;
+      elif [ "$TEST_EXPORT" == "SHARED" ]; then
+        cmake --build .;
         sudo python3 ../test-export/test-export.py shared;
       else
         travis_wait $TIMEOUT cmake --build . --target verify;
