--- a/appveyor.yml
+++ b/appveyor.yml
@@ -28,45 +28,45 @@ environment:
     EVENT_TESTS_PARALLEL: 1
     EVENT_BUILD_PARALLEL: 10
   matrix:
-    - EVENT_BUILD_METHOD: "cmake"
-      EVENT_CMAKE_OPTIONS: ""
-      APPVEYOR_BUILD_WORKER_IMAGE: "Visual Studio 2017"
-    - EVENT_BUILD_METHOD: "cmake"
-      EVENT_CMAKE_OPTIONS: "-DEVENT__LIBRARY_TYPE=STATIC"
-      APPVEYOR_BUILD_WORKER_IMAGE: "Visual Studio 2017"
-    - EVENT_BUILD_METHOD: "autotools"
-      EVENT_CONFIGURE_OPTIONS: ""
-      APPVEYOR_BUILD_WORKER_IMAGE: "Visual Studio 2017"
-    - EVENT_BUILD_METHOD: "autotools"
-      EVENT_CONFIGURE_OPTIONS: "--disable-openssl"
-      APPVEYOR_BUILD_WORKER_IMAGE: "Visual Studio 2017"
-    - EVENT_BUILD_METHOD: "autotools"
-      EVENT_CONFIGURE_OPTIONS: "--disable-thread-support"
-      APPVEYOR_BUILD_WORKER_IMAGE: "Visual Studio 2017"
-    - EVENT_BUILD_METHOD: "autotools"
-      EVENT_CONFIGURE_OPTIONS: "--disable-debug-mode"
-      APPVEYOR_BUILD_WORKER_IMAGE: "Visual Studio 2017"
-    - EVENT_BUILD_METHOD: "autotools"
-      EVENT_CONFIGURE_OPTIONS: "--disable-malloc-replacement"
-      APPVEYOR_BUILD_WORKER_IMAGE: "Visual Studio 2017"
-    - EVENT_BUILD_METHOD: "cmake"
-      EVENT_CMAKE_OPTIONS: "-DEVENT__DISABLE_OPENSSL=ON"
-      APPVEYOR_BUILD_WORKER_IMAGE: "Visual Studio 2017"
-    - EVENT_BUILD_METHOD: "cmake"
-      EVENT_CMAKE_OPTIONS: "-DEVENT__DISABLE_THREAD_SUPPORT=ON"
-      APPVEYOR_BUILD_WORKER_IMAGE: "Visual Studio 2017"
-    - EVENT_BUILD_METHOD: "cmake"
-      EVENT_CMAKE_OPTIONS: "-DEVENT__DISABLE_DEBUG_MODE=ON"
-      APPVEYOR_BUILD_WORKER_IMAGE: "Visual Studio 2017"
-    - EVENT_BUILD_METHOD: "cmake"
-      EVENT_CMAKE_OPTIONS: "-DEVENT__DISABLE_MM_REPLACEMENT=ON"
-      APPVEYOR_BUILD_WORKER_IMAGE: "Visual Studio 2017"
-    - EVENT_BUILD_METHOD: "cmake"
-      EVENT_CMAKE_OPTIONS: "-DCMAKE_C_FLAGS='-DUNICODE -D_UNICODE'"
-      APPVEYOR_BUILD_WORKER_IMAGE: "Visual Studio 2017"
-    - EVENT_BUILD_METHOD: "cmake"
-      EVENT_CMAKE_OPTIONS: ""
-      APPVEYOR_BUILD_WORKER_IMAGE: "Visual Studio 2019"
+#     - EVENT_BUILD_METHOD: "cmake"
+#       EVENT_CMAKE_OPTIONS: ""
+#       APPVEYOR_BUILD_WORKER_IMAGE: "Visual Studio 2017"
+#     - EVENT_BUILD_METHOD: "cmake"
+#       EVENT_CMAKE_OPTIONS: "-DEVENT__LIBRARY_TYPE=STATIC"
+#       APPVEYOR_BUILD_WORKER_IMAGE: "Visual Studio 2017"
+#     - EVENT_BUILD_METHOD: "autotools"
+#       EVENT_CONFIGURE_OPTIONS: ""
+#       APPVEYOR_BUILD_WORKER_IMAGE: "Visual Studio 2017"
+#     - EVENT_BUILD_METHOD: "autotools"
+#       EVENT_CONFIGURE_OPTIONS: "--disable-openssl"
+#       APPVEYOR_BUILD_WORKER_IMAGE: "Visual Studio 2017"
+#     - EVENT_BUILD_METHOD: "autotools"
+#       EVENT_CONFIGURE_OPTIONS: "--disable-thread-support"
+#       APPVEYOR_BUILD_WORKER_IMAGE: "Visual Studio 2017"
+#     - EVENT_BUILD_METHOD: "autotools"
+#       EVENT_CONFIGURE_OPTIONS: "--disable-debug-mode"
+#       APPVEYOR_BUILD_WORKER_IMAGE: "Visual Studio 2017"
+#     - EVENT_BUILD_METHOD: "autotools"
+#       EVENT_CONFIGURE_OPTIONS: "--disable-malloc-replacement"
+#       APPVEYOR_BUILD_WORKER_IMAGE: "Visual Studio 2017"
+#     - EVENT_BUILD_METHOD: "cmake"
+#       EVENT_CMAKE_OPTIONS: "-DEVENT__DISABLE_OPENSSL=ON"
+#       APPVEYOR_BUILD_WORKER_IMAGE: "Visual Studio 2017"
+#     - EVENT_BUILD_METHOD: "cmake"
+#       EVENT_CMAKE_OPTIONS: "-DEVENT__DISABLE_THREAD_SUPPORT=ON"
+#       APPVEYOR_BUILD_WORKER_IMAGE: "Visual Studio 2017"
+#     - EVENT_BUILD_METHOD: "cmake"
+#       EVENT_CMAKE_OPTIONS: "-DEVENT__DISABLE_DEBUG_MODE=ON"
+#       APPVEYOR_BUILD_WORKER_IMAGE: "Visual Studio 2017"
+#     - EVENT_BUILD_METHOD: "cmake"
+#       EVENT_CMAKE_OPTIONS: "-DEVENT__DISABLE_MM_REPLACEMENT=ON"
+#       APPVEYOR_BUILD_WORKER_IMAGE: "Visual Studio 2017"
+#     - EVENT_BUILD_METHOD: "cmake"
+#       EVENT_CMAKE_OPTIONS: "-DCMAKE_C_FLAGS='-DUNICODE -D_UNICODE'"
+#       APPVEYOR_BUILD_WORKER_IMAGE: "Visual Studio 2017"
+#     - EVENT_BUILD_METHOD: "cmake"
+#       EVENT_CMAKE_OPTIONS: ""
+#       APPVEYOR_BUILD_WORKER_IMAGE: "Visual Studio 2019"
     - EVENT_BUILD_METHOD: "cmake"
       EVENT_CMAKE_OPTIONS: ""
       APPVEYOR_BUILD_WORKER_IMAGE: "Visual Studio 2017"
@@ -91,6 +91,7 @@ init:
   - 'echo PATH is: %PATH%'
 
 build_script:
+  - ps: $PIPENV_QUIET="true"
   - ps: |
       if ($env:EVENT_BUILD_METHOD -eq 'autotools') {
         $env:PATH="$env:MPATH;$env:OPENSSL_ROOT/bin;$env:PATH"
