--- a/appveyor.yml
+++ b/appveyor.yml
@@ -135,10 +135,10 @@ build_script:
         if ($LastExitCode -ne 0) { $host.SetShouldExit($LastExitCode)  }
         if ($env:TEST_EXPORT -eq 'STATIC') {
           &$env:PYTHON3 ../test-export/test-export.py static 2>&1 3>&1
-          [[ $? -ne 0 ]] && exit 1
+          if ($LastExitCode -ne 0) { $host.SetShouldExit($LastExitCode)  }
         } elseif ($env:TEST_EXPORT -eq 'SHARED') {
           &$env:PYTHON3 ../test-export/test-export.py shared 2>&1 3>&1
-          [[ $? -ne 0 ]] && exit 1
+          if ($LastExitCode -ne 0) { $host.SetShouldExit($LastExitCode)  }
         } else {
           ctest --output-on-failure -j $env:EVENT_TESTS_PARALLEL
         }
